[gd_scene load_steps=6 format=3 uid="uid://cpuxjpf7s6s8d"]

[ext_resource type="Script" path="res://Scenes/Player/ghost.gd" id="1_hypm5"]
[ext_resource type="Texture2D" uid="uid://cga7xavhsjhe" path="res://Assets/Ui/Emote/emote2.png" id="2_yoexm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_m1ylg"]
radius = 24.1677

[sub_resource type="CircleShape2D" id="CircleShape2D_h7bmc"]
radius = 3.33333

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_75hal"]
radius = 5.0
height = 14.0

[node name="Ghost" type="CharacterBody2D"]
scale = Vector2(1.2, 1.2)
floor_constant_speed = true
script = ExtResource("1_hypm5")

[node name="Expression" type="Sprite2D" parent="."]
texture = ExtResource("2_yoexm")

[node name="PickUpRange" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickUpRange"]
position = Vector2(0, -0.61)
shape = SubResource("CircleShape2D_m1ylg")
debug_color = Color(0.553764, 0.418272, 0.957799, 0.42)

[node name="CollectArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
shape = SubResource("CircleShape2D_h7bmc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(7.10543e-16, -0.833333)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_75hal")

[node name="WanderTimer" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="body_entered" from="PickUpRange" to="." method="_on_pick_up_range_body_entered"]
[connection signal="body_exited" from="PickUpRange" to="." method="_on_pick_up_range_body_exited"]
[connection signal="body_entered" from="CollectArea" to="." method="_on_collect_area_body_entered"]
[connection signal="timeout" from="WanderTimer" to="." method="_on_wander_timer_timeout"]
